[package]
name = "my_corpus"
version = "0.1.0"
edition = "2018"
description = "my original language learning app"
license = "MIT/Apache-2.0"
authors = ["Bo Yang <yh198595@gmail.com>"]
repository = "https://github.com/BOBO1997/my_corpus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"